--- a/PictureViewer/Views/MainWindow.xaml
+++ b/PictureViewer/Views/MainWindow.xaml
@@ -11,10 +11,10 @@
         <Border BorderBrush="#fff" BorderThickness="3,3,3,3" Grid.ColumnSpan="2"/>
         <CheckBox x:Name="checkbox1" Content="Stretch" Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="2" IsChecked="False" Checked="checkbox1_Checked" Unchecked="checkbox1_Unchecked" Margin="0,0,446,0"/>
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" FlowDirection="RightToLeft">
-            <Button x:Name="showButton" Content="Show a picture" Click="showButton_Click"/>
-            <Button x:Name="clearButton" Content="Clear the picture" Click="clearButton_Click"/>
-            <Button x:Name="backgroundButton" Content="Set the background color" Click="backgroundButton_Click"/>
-            <Button x:Name="closeButton" Content="Close" Click="Button_Click"/>
+            <Button x:Name="showButton" Content="Show a picture" Click="showButton_Click" FontSize="11"/>
+            <Button x:Name="clearButton" Content="Clear the picture" Click="clearButton_Click" FontSize="11"/>
+            <Button x:Name="backgroundButton" Content="Set the background color" Click="backgroundButton_Click" FontSize="11"/>
+            <Button x:Name="closeButton" Content="Close" Click="Button_Click" FontSize="11"/>
         </StackPanel>
         <Rectangle x:Name="rectangle1" Grid.ColumnSpan="2"/>
         <Grid.RowDefinitions>
